--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,25 +8,7 @@
             <li class="app-sidebar-item">
                 <a href="#" class="app-sidebar-link active">
                     <span class="app-sidebar-icon">🏠</span>
-                    <span class="app-sidebar-text">หน้าหลัก</span>
-                </a>
-            </li>
-            <li class="app-sidebar-item">
-                <a href="#" class="app-sidebar-link">
-                    <span class="app-sidebar-icon">💳</span>
-                    <span class="app-sidebar-text">ชำระเงิน</span>
-                </a>
-            </li>
-            <li class="app-sidebar-item">
-                <a href="#" class="app-sidebar-link">
-                    <span class="app-sidebar-icon">📊</span>
-                    <span class="app-sidebar-text">รายงาน</span>
-                </a>
-            </li>
-            <li class="app-sidebar-item">
-                <a href="#" class="app-sidebar-link">
-                    <span class="app-sidebar-icon">⚙️</span>
-                    <span class="app-sidebar-text">ตั้งค่า</span>
+                    <span class="app-sidebar-text">ใบแจ้งชำระเงิน</span>
                 </a>
             </li>
         </ul>
